added some tests for controllers.

--- a/app/views/roots/index.html.erb
+++ b/app/views/roots/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Roots#index</h1>
+<h1><%= link_to 'HomePage', root_path %></h1>
 <p>Find me in app/views/roots/index.html.erb</p>
 <hr/>
 <p><%= link_to 'Sign up', new_sign_up_path %></p>
-<p><%= link_to 'Sign up', new_sign_in_path %></p>
+<p><%= link_to 'Sign in', new_sign_in_path %></p>
