--- a/app/views/sign/up/_form.html.erb
+++ b/app/views/sign/up/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: @user_email, url: sign_up_index_path do |form| %>
   <% if @user_email.errors.any? %>
     <div>
-      <h2><%= pluralize(@user_email.errors.count, "error") %> prohibited this person from being saved:</h2>
+      <h2><%= pluralize(@user_email.errors.count, "error") %> prohibited this email address from being saved:</h2>
 
       <ul>
         <% @user_email.errors.each do |error| %>
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :email, style: "display: block" %>
-    <%= form.text_field :email %>
+    <%= form.label :address, style: "display: block" %>
+    <%= form.text_field :address %>
   </div>
 
   <div>
