[Checkpoint] rename url heirarchey...
sign up => membership
sign in/out => session
inactivate => ???

--- a/app/views/roots/index.html.erb
+++ b/app/views/roots/index.html.erb
@@ -3,3 +3,5 @@
 <hr/>
 <p><%= link_to 'Sign up', new_sign_up_path %></p>
 <p><%= link_to 'Sign in', new_sign_in_path %></p>
+<p><%= link_to 'Sign out', edit_sign_out_path %></p>
+<p><%= link_to 'inactivate', new_deactivate_path %></p>
