[SYSTEM] You can run Rails on your env.

--- a/app/views/user/roots/index.html.erb
+++ b/app/views/user/roots/index.html.erb
@@ -1,4 +1,4 @@
 <h1>User::Roots#index</h1>
 <p>Find me in app/views/user/roots/index.html.erb</p>
 <hr/>
-<p>Redirect to Remix's page.</p>
+<p>Redirect to Remix's page, or <%= link_to 'click here', ENV['REMIX_URL'] %>.</p>
