--- a/app/views/user/memberships/new.html.erb
+++ b/app/views/user/memberships/new.html.erb
@@ -1,2 +1,49 @@
 <h1>User::Memberships#new</h1>
 <p>Find me in app/views/user/memberships/new.html.erb</p>
+<hr>
+
+<%= form_with model: @user_email, url: user_membership_emails_path do |form| %>
+  <% if @user_email.errors.any? %>
+    <div>
+      <h2><%= pluralize(@user_email.errors.count, "error") %> prohibited this email address from being saved:</h2>
+
+      <ul>
+        <% @user_email.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div>
+    <%= form.label :address, style: "display: block" %>
+    <%= form.email_field :address %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
+
+<%= form_with model: @user_phone, url: user_membership_phones_path do |form| %>
+  <% if @user_phone.errors.any? %>
+    <div>
+      <h2><%= pluralize(@user_phone.errors.count, "error") %> prohibited this email address from being saved:</h2>
+
+      <ul>
+        <% @user_phone.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div>
+    <%= form.label :number, style: "display: block" %>
+    <%= form.telephone_field :number %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
