--- a/app/views/samples/edit.html.erb
+++ b/app/views/samples/edit.html.erb
@@ -2,11 +2,11 @@
 
 <h1>Editing sample</h1>
 
-<%= render "form", user_email: @user_email %>
+<%= render "form", sample: @sample %>
 
 <br>
 
 <div>
-  <%= link_to "Show this sample", @user_email %> |
+  <%= link_to "Show this sample", @sample %> |
   <%= link_to "Back to samples", samples_path %>
 </div>
