--- a/app/views/user/registration_emails/edit.html.erb
+++ b/app/views/user/registration_emails/edit.html.erb
@@ -1,7 +1,9 @@
-<h1>User::MembershipEmails#show</h1>
+<h1>User::UserEmails#edit</h1>
 <p>Find me in app/views/user/membership_emails/show.html.erb</p>
 <hr>
 <p>Check your email. You can close this page.</p>
+
+<p><%= flash[:notice] %></p>
 
 <%= form_with url: user_registration_email_path, method: :put do |form| %>
   <div>
