--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,6 +1,7 @@
+<% content_for(:page_title, 'Sign Up') %>
+
 <h1>User::Memberships#new</h1>
 <p>Find me in app/views/user/memberships/new.html.erb</p>
 <hr>
-
 
 <%= render "user/registration_emails/form", user_email: @user_email %>
