[Checkpoint] I am creating sign up/in system

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body class="px-4">
+    <header>
+      <%= link_to 'Umaxica', '/' %>
+    </header>
+
     <%= yield %>
+
+    <footer>
+      <%= link_to 'Homepage', '/' %>
+    </footer>
   </body>
 </html>
