--- a/app/views/user/registration_emails/edit.html.erb
+++ b/app/views/user/registration_emails/edit.html.erb
@@ -15,3 +15,8 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+
+<div>
+  <%= link_to "Back to registration page", new_user_registration_path %>
+</div>
