--- a/app/views/user/registration_information/new.html.erb
+++ b/app/views/user/registration_information/new.html.erb
@@ -1,2 +1,6 @@
 <h1>User::RegistrationInformation#show</h1>
 <p>Find me in app/views/user/registration_information/show.html.erb</p>
+
+<hr/>
+
+<%= render "form", user: @user %>
