use different view layout from user/staff url.

--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -11,13 +11,13 @@
 
   <body class="px-4">
     <header>
-      <%= link_to 'Umaxica', '/' %>
+      <%= link_to 'UMAXICA(USER)', user_root_path %>
     </header>
 
     <%= yield %>
 
     <footer>
-      <%= link_to 'Homepage', '/' %>
+      <%= link_to 'Homepage', user_root_path %>
     </footer>
   </body>
 </html>
