--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body class="px-4">
-    <header>
+    <header className="font-sans p-4">
       <%= link_to 'UMAXICA(USER)', user_root_path %>
     </header>
 
