--- a/app/views/layouts/staff/application.html.erb
+++ b/app/views/layouts/staff/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <title><%= content_for?(:page_title) ? "Umaxica | #{yield(:page_title)} " : "Umaxica" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -9,9 +9,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body class="px-4">
-    <header className="font-sans p-4">
-      <%= link_to 'UMAXICA(STAFF)', staff_root_path %>
+  <body>
+    <header>
+      <h1 class="font-sans p-4"><%= link_to 'UMAXICA(STAFF)', staff_root_path %></h1>
     </header>
 
     <%= yield %>
