[Checkpoint] I forget to do those changes.

--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for?(:page_title) ? "Umaxica | #{yield(:page_title)} " : "Umaxica" %></title>
+    <title><%= content_for?(:page_title) ? "UMAXICA | #{yield(:page_title)} " : "UMAXICA" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
   <body class="px-4">
-    <header className="font-sans p-4">
+    <header>
+      <h1 class="font-bold text-4xl"></h1>
       <%= link_to 'UMAXICA(USER)', user_root_path %>
     </header>
 
-    <%= yield %>
+    <nav id="app" class="mt-4 bg-white bg-opacity-50 hover:font-black hover:text-blue-500">←class属性を追加</nav>
+
+    <main class="container mx-auto mt-28 px-5 block"><%= yield %></main>
 
     <footer>
       <%= link_to 'Homepage', user_root_path %>
