--- a/app/views/layouts/staff/application.html.erb
+++ b/app/views/layouts/staff/application.html.erb
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class="px-4">
     <header>
-      <h1 class="font-sans p-4"><%= link_to 'UMAXICA(STAFF)', staff_root_path %></h1>
+      <h1 class="container mx-auto mt-28 px-5 flex"><%= link_to 'UMAXICA(STAFF)', staff_root_path %></h1>
     </header>
 
-    <%= yield %>
 
+    <nav id="app" class="mt-4 bg-white bg-opacity-50 hover:font-black hover:text-blue-500">←class属性を追加</nav>
+
+    <main class="container mx-auto mt-28 px-5 block"><%= yield %></main>
+    <%= button_to "Destroy", staff_owner_url, method: :delete, data: { turbo_confirm: '本当に削除していいですか？' } , class: "btn btn-sm btn-outline-danger" %>
     <footer>
       <%= link_to 'Homepage', staff_root_path %>
     </footer>
