--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -3,16 +3,18 @@
   <head>
     <title><%= content_for?(:page_title) ? "UMAXICA | #{yield(:page_title)} " : "UMAXICA" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= favicon_link_tag "net/favicon.ico" %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+
+    <%= stylesheet_link_tag "net/main" %>
     <%= stylesheet_link_tag "tailwind", "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
   <body class="px-4">
     <header>
       <h1 class="font-bold text-4xl"></h1>
-      <%= link_to 'UMAXICA(USER)', user_root_path %>
+      <%= link_to 'UMAXICA(SERVICE)', user_root_path %>
     </header>
 
     <nav id="app" class="mt-4 bg-white bg-opacity-50 hover:font-black hover:text-blue-500">←class属性を追加</nav>
@@ -22,5 +24,6 @@
     <footer>
       <%= link_to 'Homepage', user_root_path %>
     </footer>
+    <%= javascript_include_tag "net/main" %>
   </body>
 </html>
