[DB] remove phones tables

--- a/app/views/net/roots/index.html.erb
+++ b/app/views/net/roots/index.html.erb
@@ -1,9 +1,7 @@
 <div>
   <h1 class="font-bold text-4xl">Net::Roots#index</h1>
   <ul>
-    <li>      <%= link_to '新規登録(Home)', new_net_registration_path %>    </li>
-    <li>      <%= link_to '新規登録(apple)', new_net_registration_apple_path %>    </li>
-    <li>      <%= link_to '新規登録(email)', new_net_registration_email_path %>    </li>
-    <li>      <%= link_to '新規登録(google)', new_net_registration_google_path %>    </li>
+    <li><%= link_to 'sign up', new_net_registration_path %></li>
+    <li><%= link_to 'sign in', new_net_session_path %></li>
   </ul>
 </div>
