--- a/app/views/com/stagings/show.html.erb
+++ b/app/views/com/stagings/show.html.erb
@@ -1,4 +1,4 @@
 <div>
   <h1 class="font-bold text-4xl">Com::Stagings#show</h1>
-  <p>Find me in app/views/com/stagings/show.html.erb</p>
+  <p>HASH => <%= @git_hash %></p>
 </div>
