[SYSTEM] fixed rubocop preferences.

--- a/app/views/net/roots/index.html.erb
+++ b/app/views/net/roots/index.html.erb
@@ -1,5 +1,6 @@
 <div>
   <h1 class="font-bold text-4xl">Net::Roots#index</h1>
+  <p>This screen is not displayed in the production environment.</p>
   <ul>
     <li><%= link_to 'sign up', new_net_registration_path %></li>
     <li><%= link_to 'sign in', new_net_session_path %></li>
