--- a/app/views/org/roots/index.html.erb
+++ b/app/views/org/roots/index.html.erb
@@ -1,4 +1,4 @@
 <div>
   <h1 class="font-bold text-4xl">Org::Roots#index</h1>
-  <p>Find me in app/views/org/roots/index.html.erb</p>
+  <p>This screen is not displayed in the production environment.</p>
 </div>
