--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -1,4 +1,4 @@
 <div>
   <h1 class="font-bold text-4xl">Com::Roots#index</h1>
-  <p>aaa</p>
+  <p>This screen is not displayed in the production environment.</p>
 </div>
