[UPDATE] fixed routing of homepages.

--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -1,4 +1,9 @@
 <div>
   <h1 class="font-bold text-4xl">Com::Roots#index</h1>
   <p>This screen is not displayed in the production environment.</p>
+  <ul>
+    <li><%= link_to 'health', com_health_path %></li>
+    <li><%= link_to 'term', com_term_path %></li>
+    <li><%= link_to 'staging', com_staging_path %></li>
+  </ul>
 </div>
