[tbc] gave up to implement sitemap preferences.

--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -5,5 +5,7 @@
     <li><%= link_to 'health', com_health_path %></li>
     <li><%= link_to 'term', com_term_path %></li>
     <li><%= link_to 'staging', com_staging_path %></li>
+    <li><%= link_to 'sitemap', '/sitemap.txt' %></li>
+    <li><%= link_to 'robots.txt', '/robots.txt' %></li>
   </ul>
 </div>
