--- a/app/views/net/roots/index.html.erb
+++ b/app/views/net/roots/index.html.erb
@@ -4,5 +4,6 @@
   <ul>
     <li><%= link_to 'sign up', new_net_registration_path %></li>
     <li><%= link_to 'sign in', new_net_session_path %></li>
+    <li><%= link_to 'robots.txt', '/robots.txt' %></li>
   </ul>
 </div>
