--- a/app/views/org/roots/index.html.erb
+++ b/app/views/org/roots/index.html.erb
@@ -1,4 +1,7 @@
 <div>
   <h1 class="font-bold text-4xl">Org::Roots#index</h1>
-  <p>This screen is not displayed in the production environment.</p>
+  <p>This screen is not displayed in the production environment.</p>  <ul>
+
+  <li><%= link_to 'robots.txt', '/robots.txt' %></li>
+</ul>
 </div>
