[REFACTORING] brashed up routing of this app.

--- a/app/views/net/registrations/new.html.erb
+++ b/app/views/net/registrations/new.html.erb
@@ -1,8 +1,9 @@
 <div>
   <h1 class="font-bold text-4xl">Net::Registrations#new</h1>
+  <p>Find me in app/views/net/registrations/new.html.erb</p>
   <ul>
-    <li>      <%= link_to '新規登録(apple)', new_net_registration_apple_path %>    </li>
-    <li>      <%= link_to '新規登録(email)', new_net_registration_email_path %>    </li>
-    <li>      <%= link_to '新規登録(google)', new_net_registration_google_path %>    </li>
+    <li><%= link_to '新規登録(email)', new_net_registration_email_path %></li>
+    <li><%= link_to '新規登録(telephone)', new_net_registration_telephone_path %></li>
+    <li><%= link_to '新規登録(apple)', new_net_registration_apple_path %></li>
+    <li><%= link_to '新規登録(google)', new_net_registration_google_path %></li>
   </ul>
-</div>
