--- a/app/views/net/roots/index.html.erb
+++ b/app/views/net/roots/index.html.erb
@@ -5,5 +5,6 @@
     <li><%= link_to 'sign up', new_net_registration_path %></li>
     <li><%= link_to 'sign in', new_net_session_path %></li>
     <li><%= link_to 'robots.txt', '/robots.txt' %></li>
+    <li><%= link_to 'privacy', net_privacy_path %></li>
   </ul>
 </div>
