--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -7,5 +7,6 @@
     <li><%= link_to 'staging', com_staging_path %></li>
     <li><%= link_to 'sitemap', '/sitemap.txt' %></li>
     <li><%= link_to 'robots.txt', '/robots.txt' %></li>
+    <li><%= link_to 'privacy', com_privacy_path %></li>
   </ul>
 </div>
