[REFACTORING] now that all tests are passing, yay!

--- a/app/views/net/registration/emails/new.html.erb
+++ b/app/views/net/registration/emails/new.html.erb
@@ -1,4 +1,19 @@
 <div>
   <h1 class="font-bold text-4xl">Net::Registration::Emails#new</h1>
   <p>Find me in app/views/net/registration/emails/new.html.erb</p>
+  <%= form_with model: @user_email, url: net_registration_email_path do |form| %>
+    <div>
+      <%= form.label :address %>
+      <%= form.email_field :address %>
+    </div>
+    <div>
+      <%= form.checkbox :confirm_policy %>
+      <%= form.label :confirm_policy, '利用規約に同意する' %>
+    </div>
+    <%= form.submit %>
+  <% end %>
+
+  <p>
+    <%= link_to 'log in?', new_net_session_path %>
+  </p>
 </div>
