--- a/app/views/net/registrations/new.html.erb
+++ b/app/views/net/registrations/new.html.erb
@@ -6,4 +6,6 @@
     <li><%= link_to '新規登録(telephone)', new_net_registration_telephone_path %></li>
     <li><%= link_to '新規登録(apple)', new_net_registration_apple_path %></li>
     <li><%= link_to '新規登録(google)', new_net_registration_google_path %></li>
+    <li><%= link_to 'Sign in ?', new_net_session_path %></li>
   </ul>
+</div>
