Add Com::ContactsController with new and create actions
This commit introduces a new `Com::ContactsController` with actions for `new` and `create`, along with necessary routes, helper, test, and a view template for the `new` action. The contact functionality is integrated into the navigation and route namespace structure, enhancing accessibility for related operations. Additionally, miscellaneous gem updates are included in the Gemfile.lock.

--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -8,6 +8,7 @@
     <li><%= link_to 'sitemap', '/sitemap.txt' %></li>
     <li><%= link_to 'robots.txt', '/robots.txt' %></li>
     <li><%= link_to 'privacy', com_privacy_path %></li>
+    <li><%= link_to 'contact', new_com_contact_path %></li>
   </ul>
 </div>
 
