--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -10,6 +10,9 @@
     <li><%= link_to 'privacy', com_privacy_path %></li>
     <li><%= link_to 'contact', new_com_contact_path %></li>
   </ul>
+  <ul>
+    <li>現在の言語: <%= I18n.locale %></li>
+    <li><%= I18n.t "hello" %></li>
+    <li><%= I18n.l Time.now %></li>
+  </ul>
 </div>
-
-<%= I18n.t "hello" %>
