[CHECK POINT] bundle updated.

--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -13,6 +13,6 @@
   <ul>
     <li>現在の言語: <%= I18n.locale %></li>
     <li><%= I18n.t "hello" %></li>
-    <li><%= I18n.l Time.now %></li>
+    <li><%= Time.now.in_time_zone("Tokyo") %></li>
   </ul>
 </div>
