[CHECK POINT] implemented default params.

--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -12,6 +12,7 @@
   </ul>
   <ul>
     <li>現在の言語: <%= I18n.locale %></li>
+    <li>TimeZone: <%= params[:tz].to_s.downcase == 'utc' ? "utc" : 'jst'  %></li>
     <li><%= I18n.t "hello" %></li>
     <li><%= Time.now.in_time_zone("Tokyo") %></li>
   </ul>
