--- a/app/views/com/roots/index.html.erb
+++ b/app/views/com/roots/index.html.erb
@@ -15,5 +15,6 @@
     <li>TimeZone: <%= params[:tz].to_s.downcase == 'utc' ? "utc" : 'jst'  %></li>
     <li><%= I18n.t "hello" %></li>
     <li><%= Time.now.in_time_zone("Tokyo") %></li>
+    <li><%= to_localetime Time.now, 'jst' %></li>
   </ul>
 </div>
