[INFO] a lot of bugs included.

--- a/app/views/dev/roots/index.html.erb
+++ b/app/views/dev/roots/index.html.erb
@@ -1,4 +1,8 @@
 <div>
-  <h1 class="font-bold text-4xl">Dev::Root#index</h1>
+  <h1 class="font-bold text-4xl">UMAXICA(Dev)</h1>
   <p>Find me in app/views/dev/root/index.html.erb</p>
+  <ul>
+    <li>api</li>
+    <li>www</li>
+  </ul>
 </div>
