--- a/app/views/www/show.html.erb
+++ b/app/views/www/show.html.erb
@@ -1,6 +1,6 @@
 <div>
-  <h1 class="font-bold text-4xl">UMAXICA(Dev)</h1>
-  <p>Find me in app/views/dev/root/index.html.erb</p>
+  <h1 class="font-bold text-4xl">Dev::Api::Coms#show</h1>
+  <p>Find me in app/views/dev/api/com/show.html.erb</p>
   <ul>
     <li><%= link_to 'api', dev_api_path %></li>
     <li><%= link_to 'www', dev_www_path %></li>
