--- a/app/views/dev/www/org/show.html.erb
+++ b/app/views/dev/www/org/show.html.erb
@@ -2,6 +2,8 @@
   <h1 class="font-bold text-4xl">Dev::Www::Org#show</h1>
   <p>Find me in app/views/dev/www/org/show.html.erb</p>
   <ul>
+    <li><%= link_to 'health', www_org_health_url %></li>
+    <li><%= link_to 'robots', www_org_robots_url %></li>
     <li><%= link_to 'RETURN', dev_www_path %></li>
   </ul>
 </div>
