--- a/app/views/www/org/robots/index.text.erb
+++ b/app/views/www/org/robots/index.text.erb
@@ -1,4 +1,2 @@
-<div>
-  <h1 class="font-bold text-4xl">Www::Org::Robots#index</h1>
-  <p>Find me in app/views/www/org/robots/index.html.erb</p>
-</div>
+User-agent: *
+Allow: /
