--- a/app/views/dev/api/net/show.html.erb
+++ b/app/views/dev/api/net/show.html.erb
@@ -2,6 +2,7 @@
   <h1 class="font-bold text-4xl">Dev::Api::Net#show</h1>
   <p>Find me in app/views/dev/api/nets/show.html.erb</p>
   <ul>
+    <li><%= link_to 'robots', api_com_robots_url(format: :txt) %></li>
     <li><%= link_to 'RETURN', dev_api_path %></li>
   </ul>
 </div>
