--- a/app/views/dev/www/com/show.html.erb
+++ b/app/views/dev/www/com/show.html.erb
@@ -3,7 +3,7 @@
   <p>Find me in app/views/dev/www/com/show.html.erb</p>
   <ul>
     <li><%= link_to 'health', www_com_health_url %></li>
-    <li><%= link_to 'robots', www_com_robots_url %></li>
+    <li><%= link_to 'robots', www_com_robots_url(format: :txt) %></li>
     <li><%= link_to 'RETURN', dev_www_path %></li>
   </ul>
 </div>
